--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="2; url=Finans.Web/src/app/app.component.html">
+<meta http-equiv="Refresh" content="2; url=src/app/app.component.html">
